--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Viajes Chile</title>
+    <link rel="shortcut icon" href="assets/img/viajes.svg" type="image/x-icon">
     <!--Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!--Font Awesome-->
@@ -41,6 +42,7 @@
           </div>
         </div>
       </nav>
+
       <!--Carrusel-->
       <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
@@ -65,7 +67,69 @@
       </div>          
     </header>
 
+    <!--Quiénes somos-->
+    <div class="container-fluid text-center somos px-5 d-none d-sm-block">
+        <h2>Quiénes Somos</h2>
+        <div class="row align-items-start pt-5 mx-5">
+          <div class="d-none d-sm-block col-md-4">
+              <i class="fa-solid fa-plane bg-cyan w-100"></i>
+            <p class="text-start">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Scelerisque felis imperdiet proin fermentum leo vel. Semper quis lectus nulla at volutpat diam ut venenatis. Montes nascetur ridiculus mus mauris vitae ultricies leo integer malesuada. Felis imperdiet proin fermentum leo vel orci porta non pulvinar. Amet mattis vulputate enim nulla aliquet. Phasellus vestibulum lorem sed risus ultricies tristique nulla.</p>
+          </div>
+          <div class="d-none d-sm-block col-md-4">
+            <p class="text-start">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Scelerisque felis imperdiet proin fermentum leo vel. Semper quis lectus nulla at volutpat diam ut venenatis. Montes nascetur ridiculus mus mauris vitae ultricies leo integer malesuada. Felis imperdiet proin fermentum leo vel orci porta non pulvinar. Amet mattis vulputate enim nulla aliquet. Phasellus vestibulum lorem sed risus ultricies tristique nulla.</p>
+            <i class="fa-solid fa-mountain bg-cyan w-100"></i>
+          </div>
+          <div class="d-none d-sm-block col-md-4">
+              <i class="fa-solid fa-route bg-cyan w-100"></i>
+            <p class="text-start">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Scelerisque felis imperdiet proin fermentum leo vel. Semper quis lectus nulla at volutpat diam ut venenatis. Montes nascetur ridiculus mus mauris vitae ultricies leo integer malesuada. Felis imperdiet proin fermentum leo vel orci porta non pulvinar. Amet mattis vulputate enim nulla aliquet. Phasellus vestibulum lorem sed risus ultricies tristique nulla.</p>
+          </div>
+        </div>
+      </div>
 
+    <!--Destacados-->
+    <div class="container">
+        <h2 class="text-center">Destacados</h2>
+        <div class="row pt-5">
+            <div class="col-12 col-md-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="assets/img/card1.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="assets/img/card2.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="assets/img/card3.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="assets/img/card4.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <!--Formulario-->
 
 
 
