Se añade readme

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
             <div class="mb-5">
-              <button type="button" id="enviarCorreo" class="ms-auto text-end btn btn-info text-white" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-custom-class="custom-tooltip" data-bs-title="Haz click para enviar tu mensaje">Enviar</button>
+              <button type="button" id="enviarMsj" class="ms-auto text-end btn btn-info text-white" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-custom-class="custom-tooltip" data-bs-title="Haz click para enviar tu mensaje">Enviar</button>
             </div>
           </div>
         </div>
